2007-11-01  Andy Wingo  <wingo@pobox.com>

	* Makefile.am:
	* doc/: Add documentation, generated from upstream gtk-doc.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/libgnomecanvas.defs: Update for autogenerated
	defs and libgnomecanvas of gnome 2.16.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2007-05-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/canvas-spec.scm (initialize): The glib wrapset declares
	the type rules we need, remove ours.

2007-05-04  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/libgnomecanvas.defs (gnome_canvas_points_new):
	Don't leave guile mode for this one.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/canvas-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

2006-08-13  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/libgnomecanvas.defs
	("gnome_canvas_item_construct"): Don't ignore this one twice. Wha?

2005-10-08  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/libgnomecanvas.defs: Ignore
	gnome_canvas_item_construct, it has a va_list argument.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2005-04-09  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/overrides/libgnomecanvas.defs: Ignore some more functions.

2005-01-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/canvas.scm (main): Add return parameter example call
	using receive.
